applications/core/saas-fabric/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-fabric
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: saas-fabric
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
